--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,7 @@ super_model/__pycache__/
 super_model/templatetags/__pycache__/
 travnik/__pycache__/
 try.py
+Would skip repository cache/
+Would skip repository contact_form/
+Would skip repository helper/
+Would skip repository super_model/
